--- a/manifest.json
+++ b/manifest.json
@@ -18,9 +18,9 @@
   } ],
   "permissions": ["storage"],
   "converted_from_user_script": true,
-  "description": "CS255-Lastname1-Lastname2 - CS255 Assignment 1",
+  "description": "SP10n-Lastname1-Lastname2 - SP10n Assignment 1",
   "key": "ad44N+Oz4atwVsSOFmiueoWpb/1JG9aQpjLf4eorMWU=",
-  "name": "CS255-Lastname1-Lastname2",
+  "name": "SP10n-Lastname1-Lastname2",
   "version": "1.5",
   "manifest_version": 2
 }
